syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "StatusItemProto";
option objc_class_prefix = "ETP";

package domain;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";
import "routines.proto";
import "relay.proto";
// flat-ent: Status
message StatusItemData {
    option (routines.entity_type) = "StatusItem";
    option (routines.keys).keys = "status_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = false;
    // keys: statusId
    string status_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string status_type_id = 2 [(routines.opts).field_type = "id"];
    string status_code = 3 [(routines.opts).field_type = "short-varchar"];
    string sequence_id = 4 [(routines.opts).field_type = "id"];
    string description = 5 [(routines.opts).field_type = "description"];
    google.protobuf.Timestamp last_updated_tx_stamp = 6 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 7 [(routines.opts).field_type = "date-time"];
    string tenant_id = 8 [(routines.opts).field_type = "id"];
     

    // extra
    google.protobuf.Struct extra = 102;
    map<string, google.protobuf.Any> attachments = 103 ;
}

message StatusItemKey{
    string status_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message StatusItemList{
    repeated StatusItemData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListStatusItems` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}
