syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "CommonFactExtendProto";

package domain;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

import "date.proto";
import "timeofday.proto";
import "routines.proto";
import "condition.proto";
import "relay.proto";

// Fact Proto Entity
message FactProtoData {
    option (routines.entity_type) = "FactProto";
    option (routines.keys).keys = "fact_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: factId
    // fields
    string fact_id = 1 [json_name = "fact_id", (google.api.graphql.relay_options).id = true];
    string data = 2 [json_name = "data"];
    string fact_proto_type_id = 3 [json_name = "fact_proto_type_id"];
    string status_id = 4 [json_name = "status_id"];
    google.protobuf.Timestamp last_updated_tx_stamp = 5 [json_name = "last_updated_tx_stamp"];
    google.protobuf.Timestamp created_tx_stamp = 6 [json_name = "created_tx_stamp"];
    
        

    // extra
    google.protobuf.Struct extra = 13;
    map<string, google.protobuf.Any> attachments = 14;
}


message FactProtoKey{
    string fact_id = 1 [json_name = "fact_id", (google.api.graphql.relay_options).id = true];
}

message FactProtoList{
    repeated FactProtoData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListFactProtos` method to retrieve the next
    // page of results.
    string next_page_token = 2;
}


// Fact Proto Type Entity
message FactProtoTypeData {
    option (routines.entity_type) = "FactProtoType";
    option (routines.keys).keys = "fact_proto_type_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: factProtoTypeId
    // fields
    string fact_proto_type_id = 1 [json_name = "fact_proto_type_id", (google.api.graphql.relay_options).id = true];
    string parent_type_id = 2 [json_name = "parent_type_id"];
    string description = 3 [json_name = "description"];
    google.protobuf.Timestamp last_updated_tx_stamp = 4 [json_name = "last_updated_tx_stamp"];
    google.protobuf.Timestamp created_tx_stamp = 5 [json_name = "created_tx_stamp"];
    
        

    // extra
    google.protobuf.Struct extra = 9;
    map<string, google.protobuf.Any> attachments = 10;
}


message FactProtoTypeKey{
    string fact_proto_type_id = 1 [json_name = "fact_proto_type_id", (google.api.graphql.relay_options).id = true];
}

message FactProtoTypeList{
    repeated FactProtoTypeData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListFactProtoTypes` method to retrieve the next
    // page of results.
    string next_page_token = 2;
}


// Fact Proto Status Entity
message FactProtoStatusData {
    option (routines.entity_type) = "FactProtoStatus";
    option (routines.keys).keys = "fact_proto_id, status_date";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: factProtoId, statusDate
    // fields
    string fact_proto_id = 1 [json_name = "fact_proto_id"];
    google.protobuf.Timestamp status_date = 2 [json_name = "status_date"];
    google.protobuf.Timestamp status_end_date = 3 [json_name = "status_end_date"];
    string change_by_user_login_id = 4 [json_name = "change_by_user_login_id"];
    string status_id = 5 [json_name = "status_id"];
    google.protobuf.Timestamp last_updated_tx_stamp = 6 [json_name = "last_updated_tx_stamp"];
    google.protobuf.Timestamp created_tx_stamp = 7 [json_name = "created_tx_stamp"];
    string id = 8 [json_name = "id", (google.api.graphql.relay_options).id = true];
    
        

    // extra
    google.protobuf.Struct extra = 13;
    map<string, google.protobuf.Any> attachments = 14;
}


message FactProtoStatusKey{
    string fact_proto_id = 1 [json_name = "fact_proto_id"];
    google.protobuf.Timestamp status_date = 2 [json_name = "status_date"];
}

message FactProtoStatusList{
    repeated FactProtoStatusData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListFactProtoStatuses` method to retrieve the next
    // page of results.
    string next_page_token = 2;
}


